# UnicornOnAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zy/learn/unicornonandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  unicorn_Unicorn.c
app/src/main/java/com/zy/learn/unicornonandroid/: MainActivity.java  SampleArm.java
app/src/main/java/unicorn/: Unicorn.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zy/learn/unicornonandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
